# HelixLauncher

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: build.yml
.run/: Authentication Test.run.xml
helixlauncher/: Cargo.toml
helixlauncher-cli/: Cargo.toml
helixlauncher-cli/src/: main.rs
helixlauncher-core/: Cargo.toml  build.rs
helixlauncher-core/src/: auth.rs  config.rs  game.rs  instance.rs  launcher.rs  lib.rs  meta.rs  util.rs
helixlauncher-core/src/addon/: curseforge.rs  mod.rs  modrinth.rs
helixlauncher-core/src/auth/: account.rs  mod.rs
helixlauncher-core/src/launch/: asset.rs  game.rs  instance.rs  mod.rs  prepared.rs
helixlauncher-gui/: Cargo.toml
helixlauncher-gui/qml/: AccountAddPage.qml  AccountsPage.qml  InstancePage.qml  InstancesPage.qml  NewInstancePage.qml  SignInPage.qml  main.qml
helixlauncher-gui/src/: accounts.rs  instances.rs  main.rs
helixlauncher-java/: Cargo.toml
helixlauncher-java/examples/: list_java.rs
helixlauncher-java/src/: lib.rs  search.rs
helixlauncher-javalaunch/: Cargo.toml  build.rs
helixlauncher-javalaunch/src/: exports.c  helixlauncher.rc  main.rs  resource.h
helixlauncher/qml/: main.qml
helixlauncher/src/: main.rs
hxmc/: Cargo.toml
hxmc/src/: main.rs
libhelix/: Cargo.toml  build.rs
libhelix/src/: auth.rs  authentication.rs  config.rs  instance.rs  launcher.rs  lib.rs  test.rs
libhelix/src/auth/: account.rs  request_structs.rs
libhelix/src/authentication/: account.rs  request_structs.rs
share/: helixlauncher.rc  resource.h
