[workspace]
members = [
    "helixlauncher-gui",
    "helixlauncher-cli",
    "helixlauncher-core",
    "helixlauncher-java",
    "helixlauncher-javalaunch",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/HelixLauncher/HelixLauncher"
license = "MPL-2.0"
description = "Minecraft launching library built on Rust"

[profile.release]
lto = true

[profile.release-javalaunch]
inherits = "release"
panic = "abort"
