[package]
name = "helixlauncher-cli"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "Helix Launcher CLI"

[[bin]]
name = "hxmc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.8", features = ["env", "derive"] }
clap-verbosity-flag = "2.2.0"
log = { version = "0.4.22", features = ["serde"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "fs", "process"] }
helixlauncher-core = { version = "0.1.0", path = "../helixlauncher-core" }
inquire = "0.7.5"
