[package]
name = "helixlauncher-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[features]
ffi = ["dep:cbindgen"]

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.21", features = ["rt", "macros"] }
helixlauncher-meta = { version = "0.1.0",  git = "https://github.com/HelixLauncher/meta.git" }

[build-dependencies]
cbindgen = { version = "0.24", optional = true }
