[package]
name = "helixlauncher-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[features]
ffi = ["dep:cbindgen"]

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
indexmap = "1.9.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.21", features = ["rt", "macros", "process", "sync"] }
helixlauncher-meta = { version = "0.1.0",  git = "https://github.com/HelixLauncher/meta.git" }
dirs = "4.0.0"
regex = "1.7.1"
lazy_static = "1.4.0"
sha1 = "0.10.5"
sha2 = "0.10.6"
digest = "0.10.6"
hex = "0.4.3"
zip = "0.6.4"
anyhow = "1.0.69" # FIXME: remove
futures-util = "0.3.28"

[build-dependencies]
cbindgen = { version = "0.24", optional = true }
