[package]
name = "helixlauncher-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[features]
ffi = ["dep:cbindgen"]

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
indexmap = "2.2.6"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "macros", "process", "fs"] }
helixlauncher-meta = { version = "0.1.0",  git = "https://github.com/HelixLauncher/meta.git" }
dirs = "5.0.1"
regex = "1.10.5"
lazy_static = "1.5.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
digest = "0.10.7"
hex = "0.4.3"
zip = "0.6.5" # TODO: update
anyhow = "1.0.86" # FIXME: remove
futures = "0.3.30"
tempfile-fast = "0.3.4" # can't replace with tempfile because we use it to create unnamed tempfiles to move to a download target

[build-dependencies]
cbindgen = { version = "0.26.0", optional = true }

[dev-dependencies]
tempfile = "3.10.1"
