[package]
name = "helixlauncher-gui"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helixlauncher-core = { version = "0.1.0", path = "../helixlauncher-core" }
qmetaobject = "0.2.7"
