[package]
name = "helixlauncher-java"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cfg-if = "1.0.0"
helixlauncher-meta = { version = "0.1.0",  git = "https://github.com/HelixLauncher/meta.git" }
thiserror = "1"

[target."cfg(windows)".dependencies]
winreg = "0.50"
