[package]
name = "helixlauncher"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libhelix = { path = "../libhelix" }
qmetaobject = "0.2.7"
