[package]
name = "hxmc"
version = "0.1.0"
edition = "2021"
description = "Helix Launcher CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["env", "derive"] }
clap-verbosity-flag = "2.0.0"
log = { version = "0.4.17", features = ["serde"] }
pretty_env_logger = "0.4.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "fs", "process"] }
libhelix = { path = "../libhelix" }
directories = "4.0"