[package]
name = "libhelix"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[features]
ffi = ["dep:cbindgen"]

[lib]
name = "libhelix"
crate-type = ["staticlib", "lib"]

[dependencies]
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
cbindgen = { version = "0.24", optional = true }
