[package]
name = "libhelix"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description.workspace = true

[features]
ffi = ["dep:cbindgen"]

[lib]
name = "libhelix"
crate-type = ["staticlib", "lib"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["default-tls", "json", "blocking"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive", "std"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std"]

[dependencies.thiserror]
version = "1.0"
default-features = false

[build-dependencies]
cbindgen = { version = "0.24", optional = true }